Change build to not upload -dev.jar files and only the main mod

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,5 +51,5 @@ jobs:
         name: Upload LexiClient
         with:
           name: "LexiClient Build"
-          path: versions/1.8.9-forge/build/libs/*.jar
+          path: versions/1.8.9-forge/build/libs/*[!dev].jar
 
